// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditConnectionComponent should fetch FAILS 1`] = `
<div class="center" style="width:600px;">
    <!---->
    <!---->
</div>
`;

exports[`EditConnectionComponent should fetch SUCCESS 1`] = `
<div class="center" style="width:600px;">
    <!---->
    <form id="form_connection_" autocomplete="off">
        <div class="nobr center">
            <input id="button_test_connection_works_" type="button" value="Test this connection" class="ui-button" style="display:none;">
            <input id="button_to_disable_one_connection_" type="button" value="Disable" class="ui-button" style="display:none;">
            <input id="button_to_enable_one_connection_" type="button" value="Enable" class="ui-button" style="display:none;">
            <a href="#" id="button_to_save_one_connection" class="btn">Save connection</a>
        </div>
        <br>
        <div style="position:relative;margin-top:6px;text-indent:20px;width:400px;display:inline-block;">
            <label for="select_db_protocol" style="font-size:1.1rem;">Choose the connection protocol: </label>
            <select id="select_db_protocol" class="black-text" style="width:130px;height:34px;display:inline;">
                <option value="">Over HTTP</option>
                <option value="over_ssh" selected="selected">Over SSH</option>
            </select>
        </div>
        <br>
        <br>
        <ul class="tabs tabs-transparent blue lighten-3  z-depth-3">
            <li class="tab">
                <a href="#tab_db" class="active">Database</a>
            </li>
            <li class="tab">
                <a href="#tab_ssh">SSH</a>
            </li>
        </ul>
        <div id="tab_db" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_connection_name">DB Label</label>
                    <input type="text" size="50" maxlength="50" id="db_connection_name" value="bingo_test_db_connection_name" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_url_host">DB Host</label>
                    <input type="text" size="50" maxlength="50" id="db_url_host" value="db_host" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="db_username" value="db_user" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="db_password" value="db_password_111" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_db_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="3306" id="db_port_number" value="3333" class="validate">
                </div>
            </div>
        </div>
        <div id="tab_ssh" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_connection_name">SSH Label</label>
                    <input type="text" size="50" maxlength="50" id="ftp_connection_name" value="ssh_name" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_url_host">SSH Host</label>
                    <input type="text" size="50" maxlength="50" id="ftp_url_host" value="ssh_host" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="ftp_username" value="ssh_user" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="ftp_password" value="ssh_pass" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_ftp_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="22" id="ftp_port_number" value="22" class="validate">
                </div>
            </div>
        </div>
    </form>
</div>
`;

exports[`EditConnectionComponent should have default html 1`] = `
<div class="center" style="width:600px;">
    <!---->
    <form id="form_connection_" autocomplete="off">
        <div class="nobr center">
            <input id="button_test_connection_works_" type="button" value="Test this connection" class="ui-button" style="display:none;">
            <input id="button_to_disable_one_connection_" type="button" value="Disable" class="ui-button" style="display:none;">
            <input id="button_to_enable_one_connection_" type="button" value="Enable" class="ui-button" style="display:none;">
            <a href="#" id="button_to_save_one_connection" class="btn">Create new connection</a>
        </div>
        <br>
        <div style="position:relative;margin-top:6px;text-indent:20px;width:400px;display:inline-block;">
            <label for="select_db_protocol" style="font-size:1.1rem;">Choose the connection protocol: </label>
            <select id="select_db_protocol" class="black-text" style="width:130px;height:34px;display:inline;">
                <option value="">Over HTTP</option>
                <option value="over_ssh">Over SSH</option>
            </select>
        </div>
        <br>
        <br>
        <ul class="tabs tabs-transparent blue lighten-3  z-depth-3">
            <li class="tab">
                <a href="#tab_db" class="active">Database</a>
            </li>
            <li class="tab disabled">
                <a href="#tab_ssh">SSH</a>
            </li>
        </ul>
        <div id="tab_db" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_connection_name">DB Label</label>
                    <input type="text" size="50" maxlength="50" id="db_connection_name" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_url_host">DB Host</label>
                    <input type="text" size="50" maxlength="50" id="db_url_host" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="db_username" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="db_password" value="" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_db_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="3306" id="db_port_number" value="" class="validate">
                </div>
            </div>
        </div>
        <div id="tab_ssh" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_connection_name">SSH Label</label>
                    <input type="text" size="50" maxlength="50" id="ftp_connection_name" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_url_host">SSH Host</label>
                    <input type="text" size="50" maxlength="50" id="ftp_url_host" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="ftp_username" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="ftp_password" value="" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_ftp_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="22" id="ftp_port_number" value="" class="validate">
                </div>
            </div>
        </div>
    </form>
</div>
`;

exports[`EditConnectionComponent should save FAILS 1`] = `
<div class="center" style="width:600px;">
    <!---->
    <form id="form_connection_" autocomplete="off">
        <div class="nobr center">
            <input id="button_test_connection_works_" type="button" value="Test this connection" class="ui-button" style="display:none;">
            <input id="button_to_disable_one_connection_" type="button" value="Disable" class="ui-button" style="display:none;">
            <input id="button_to_enable_one_connection_" type="button" value="Enable" class="ui-button" style="display:none;">
            <a href="#" id="button_to_save_one_connection" class="btn">Save connection</a>
        </div>
        <br>
        <div style="position:relative;margin-top:6px;text-indent:20px;width:400px;display:inline-block;">
            <label for="select_db_protocol" style="font-size:1.1rem;">Choose the connection protocol: </label>
            <select id="select_db_protocol" class="black-text" style="width:130px;height:34px;display:inline;">
                <option value="">Over HTTP</option>
                <option value="over_ssh" selected="selected">Over SSH</option>
            </select>
        </div>
        <br>
        <br>
        <ul class="tabs tabs-transparent blue lighten-3  z-depth-3">
            <li class="tab">
                <a href="#tab_db" class="active">Database</a>
            </li>
            <li class="tab">
                <a href="#tab_ssh">SSH</a>
            </li>
        </ul>
        <div id="tab_db" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_connection_name">DB Label</label>
                    <input type="text" size="50" maxlength="50" id="db_connection_name" value="bingo_test_db_connection_name" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_url_host">DB Host</label>
                    <input type="text" size="50" maxlength="50" id="db_url_host" value="db_host" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="db_username" value="db_user" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="db_password" value="db_password_111" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_db_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="3306" id="db_port_number" value="3333" class="validate">
                </div>
            </div>
        </div>
        <div id="tab_ssh" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_connection_name">SSH Label</label>
                    <input type="text" size="50" maxlength="50" id="ftp_connection_name" value="ssh_name" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_url_host">SSH Host</label>
                    <input type="text" size="50" maxlength="50" id="ftp_url_host" value="ssh_host" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="ftp_username" value="ssh_user" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="ftp_password" value="ssh_pass" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_ftp_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="22" id="ftp_port_number" value="22" class="validate">
                </div>
            </div>
        </div>
    </form>
</div>
`;

exports[`EditConnectionComponent should save SUCCESS creating 1`] = `
<div class="center" style="width:600px;">
    <!---->
    <form id="form_connection_" autocomplete="off">
        <div class="nobr center">
            <input id="button_test_connection_works_" type="button" value="Test this connection" class="ui-button" style="display:none;">
            <input id="button_to_disable_one_connection_" type="button" value="Disable" class="ui-button" style="display:none;">
            <input id="button_to_enable_one_connection_" type="button" value="Enable" class="ui-button" style="display:none;">
            <a href="#" id="button_to_save_one_connection" class="btn">Create new connection</a>
        </div>
        <br>
        <div style="position:relative;margin-top:6px;text-indent:20px;width:400px;display:inline-block;">
            <label for="select_db_protocol" style="font-size:1.1rem;">Choose the connection protocol: </label>
            <select id="select_db_protocol" class="black-text" style="width:130px;height:34px;display:inline;">
                <option value="">Over HTTP</option>
                <option value="over_ssh">Over SSH</option>
            </select>
        </div>
        <br>
        <br>
        <ul class="tabs tabs-transparent blue lighten-3  z-depth-3">
            <li class="tab">
                <a href="#tab_db" class="active">Database</a>
            </li>
            <li class="tab disabled">
                <a href="#tab_ssh">SSH</a>
            </li>
        </ul>
        <div id="tab_db" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_connection_name">DB Label</label>
                    <input type="text" size="50" maxlength="50" id="db_connection_name" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_url_host">DB Host</label>
                    <input type="text" size="50" maxlength="50" id="db_url_host" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="db_username" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="db_password" value="" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_db_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="3306" id="db_port_number" value="" class="validate">
                </div>
            </div>
        </div>
        <div id="tab_ssh" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_connection_name">SSH Label</label>
                    <input type="text" size="50" maxlength="50" id="ftp_connection_name" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_url_host">SSH Host</label>
                    <input type="text" size="50" maxlength="50" id="ftp_url_host" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="ftp_username" value="" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="ftp_password" value="" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_ftp_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="22" id="ftp_port_number" value="" class="validate">
                </div>
            </div>
        </div>
    </form>
</div>
`;

exports[`EditConnectionComponent should save SUCCESS updating 1`] = `
<div class="center" style="width:600px;">
    <!---->
    <form id="form_connection_" autocomplete="off">
        <div class="nobr center">
            <input id="button_test_connection_works_" type="button" value="Test this connection" class="ui-button" style="display:none;">
            <input id="button_to_disable_one_connection_" type="button" value="Disable" class="ui-button" style="display:none;">
            <input id="button_to_enable_one_connection_" type="button" value="Enable" class="ui-button" style="display:none;">
            <a href="#" id="button_to_save_one_connection" class="btn">Save connection</a>
        </div>
        <br>
        <div style="position:relative;margin-top:6px;text-indent:20px;width:400px;display:inline-block;">
            <label for="select_db_protocol" style="font-size:1.1rem;">Choose the connection protocol: </label>
            <select id="select_db_protocol" class="black-text" style="width:130px;height:34px;display:inline;">
                <option value="">Over HTTP</option>
                <option value="over_ssh" selected="selected">Over SSH</option>
            </select>
        </div>
        <br>
        <br>
        <ul class="tabs tabs-transparent blue lighten-3  z-depth-3">
            <li class="tab">
                <a href="#tab_db" class="active">Database</a>
            </li>
            <li class="tab">
                <a href="#tab_ssh">SSH</a>
            </li>
        </ul>
        <div id="tab_db" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_connection_name">DB Label</label>
                    <input type="text" size="50" maxlength="50" id="db_connection_name" value="bingo_test_db_connection_name" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_url_host">DB Host</label>
                    <input type="text" size="50" maxlength="50" id="db_url_host" value="db_host" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="db_username" value="db_user" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="db_password" value="db_password_111" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_db_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="db_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="3306" id="db_port_number" value="3333" class="validate">
                </div>
            </div>
        </div>
        <div id="tab_ssh" class="col s12 z-depth-5">
            <br>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_connection_name">SSH Label</label>
                    <input type="text" size="50" maxlength="50" id="ftp_connection_name" value="ssh_name" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_url_host">SSH Host</label>
                    <input type="text" size="50" maxlength="50" id="ftp_url_host" value="ssh_host" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_username">User Name</label>
                    <input type="text" size="50" maxlength="50" id="ftp_username" value="ssh_user" class="validate">
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_password">Password</label>
                    <input type="password" size="50" maxlength="50" id="ftp_password" value="ssh_pass" class="validate">
                </div>
                <div class="col s2 offset-s1">
                    <a href="#" id="view_ftp_pass" class="btn small">View</a>
                </div>
            </div>
            <div class="row slim">
                <div class="input-field col s6 offset-s1">
                    <label for="ftp_port_number">Port Number</label>
                    <input type="text" size="10" maxlength="6" placeholder="22" id="ftp_port_number" value="22" class="validate">
                </div>
            </div>
        </div>
    </form>
</div>
`;
